0.12.2/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_preferences.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_preferences.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_preferences.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_preferences.py:


NDDataset creation and plotting example
=======================================
In this example, we create a 3D NDDataset from scratch,
and then we plot one section (a 2D plane)

.. GENERATED FROM PYTHON SOURCE LINES 16-19

Creation
--------
Now we will create a 3D NDDataset from scratch

.. GENERATED FROM PYTHON SOURCE LINES 19-21

.. code-block:: default

    import numpy as np








.. GENERATED FROM PYTHON SOURCE LINES 22-23

As usual, we start by loading the spectrochempy library

.. GENERATED FROM PYTHON SOURCE LINES 23-26

.. code-block:: default

    import spectrochempy as scp









.. GENERATED FROM PYTHON SOURCE LINES 27-32

Coordinates
+++++++++++
The `Coord` object allows creating an array of coordinates directly with
``Coord.linspace``, attaching metadata (units, labels, title) in a single
step — no separate numpy array needed.

.. GENERATED FROM PYTHON SOURCE LINES 32-43

.. code-block:: default

    coord0 = scp.Coord.linspace(
        200.0,
        300.0,
        3,
        labels=["cold", "normal", "hot"],
        units="K",
        title="temperature",
    )
    coord1 = scp.Coord.linspace(0.0, 60.0, 100, units="minutes", title="time-on-stream")
    coord2 = scp.Coord.linspace(4000.0, 1000.0, 100, units="cm^-1", title="wavenumber")








.. GENERATED FROM PYTHON SOURCE LINES 44-45

Labels can be useful for instance for indexing

.. GENERATED FROM PYTHON SOURCE LINES 45-49

.. code-block:: default

    a = coord0["normal"]
    print(a)






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Coord: [float64] K (size: 1)




.. GENERATED FROM PYTHON SOURCE LINES 50-54

Data and nd-Dataset
+++++++++++++++++++
``scp.fromfunction`` builds an NDDataset directly from a Python function.
The function receives the coordinate arrays and returns the intensity values.

.. GENERATED FROM PYTHON SOURCE LINES 54-70

.. code-block:: default

    def synth_func(temperature, time, wavenumber):
        return np.sin(2.0 * np.pi * wavenumber / 4000.0) * np.exp(-time / 60) * temperature


    mydataset = scp.fromfunction(
        synth_func,
        coordset=[coord0, coord1, coord2],
        title="Absorbance",
        units="absorbance",
    )
    mydataset.description = """Dataset example created for this tutorial.
    It's a 3-D dataset (with dimensionless intensity: absorbance )"""
    mydataset.name = "An example from scratch"
    mydataset.author = "Blake and Mortimer"
    print(mydataset)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    NDDataset: [float64] a.u. (shape: (z:3, y:100, x:100))




.. GENERATED FROM PYTHON SOURCE LINES 71-74

We want to plot a section of this 3D NDDataset:

NDDataset can be sliced like conventional numpy-array...

.. GENERATED FROM PYTHON SOURCE LINES 74-76

.. code-block:: default

    new = mydataset[..., 0]








.. GENERATED FROM PYTHON SOURCE LINES 77-78

or maybe more conveniently in this case, using an axis labels:

.. GENERATED FROM PYTHON SOURCE LINES 78-80

.. code-block:: default

    new = mydataset["hot"]








.. GENERATED FROM PYTHON SOURCE LINES 81-86

To plot a dataset, use the `plot` command (generic plot).
As the section NDDataset is 2D, a stack plot is displayed by default. As you can see, the x-axis is in wavenumber
and the ordinate axis is in absorbance units (au). The y dimension of the dataset is the time-on-stream (in minutes).
Because the time-on-stream values are floats, this triggers the default sequential colormap ('viridis'). The
corresponding values can be seen if `colorbar` is passed as `True`:

.. GENERATED FROM PYTHON SOURCE LINES 86-88

.. code-block:: default

    _ = new.plot(colorbar=True)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_001.png
   :alt: plot preferences
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 89-95

It is also possible to display this dataset as an image (actually a filled contour plot).
The x is the same as before, but the ordinates are now the time-on-stream values. The color of the pixels is now
related to the value of the absorbance. As the dataset contains both negative and positive values, the default
colormap is diverging (`RdBu`).

sphinx_gallery_thumbnail_number = 2

.. GENERATED FROM PYTHON SOURCE LINES 95-97

.. code-block:: default

    _ = new.plot(method="image", colorbar=True)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_002.png
   :alt: plot preferences
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 98-100

If a dataset contains only positive values, the default colormap is
sequential (`viridis`):

.. GENERATED FROM PYTHON SOURCE LINES 100-103

.. code-block:: default


    _ = scp.abs(new).plot(method="image", colorbar=True)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_003.png
   :alt: plot preferences
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 104-107

.. code-block:: default

    _ = new.plot(method="map")
    _ = scp.abs(new).plot(method="map")




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_004.png
         :alt: plot preferences
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_004.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_005.png
         :alt: plot preferences
         :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_005.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/tempdirs/scp_975yflf9/src/spectrochempy/plotting/dispatcher.py:65: DeprecationWarning: method="map" is deprecated and will be removed in 0.13.0. Use method="contour" instead.
      return backend_module.plot_dataset_impl(dataset, method, **kwargs)




.. GENERATED FROM PYTHON SOURCE LINES 108-109

Note that the scp allows one to use this syntax too:

.. GENERATED FROM PYTHON SOURCE LINES 109-111

.. code-block:: default

    _ = scp.plot_map(new)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_006.png
   :alt: plot preferences
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_preferences_006.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 112-114

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 114-116

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.280 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_preferences.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_preferences.py <plot_preferences.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_preferences.ipynb <plot_preferences.ipynb>`
